--- a/paddy/paddy/Base.lproj/Main.storyboard
+++ b/paddy/paddy/Base.lproj/Main.storyboard
@@ -690,32 +690,48 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <scrollView borderType="none" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uG1-W1-NC6">
-                                <rect key="frame" x="10" y="10" width="460" height="210"/>
+                                <rect key="frame" x="15" y="15" width="450" height="200"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="THb-wV-8KO">
-                                    <rect key="frame" x="0.0" y="0.0" width="460" height="210"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="450" height="200"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <textView importsGraphics="NO" richText="NO" verticallyResizable="YES" spellingCorrection="YES" smartInsertDelete="YES" id="NHI-uC-oop">
-                                            <rect key="frame" x="0.0" y="0.0" width="460" height="210"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="450" height="200"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <size key="minSize" width="460" height="210"/>
+                                            <size key="minSize" width="450" height="200"/>
                                             <size key="maxSize" width="481" height="10000000"/>
                                             <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                         </textView>
                                     </subviews>
                                 </clipView>
                                 <scroller key="verticalScroller" verticalHuggingPriority="750" horizontal="NO" id="b3p-Vz-MKf">
-                                    <rect key="frame" x="444" y="0.0" width="16" height="210"/>
+                                    <rect key="frame" x="434" y="0.0" width="16" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </scroller>
                             </scrollView>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kua-dF-pb2">
+                                <rect key="frame" x="466" y="216" width="13" height="13"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="13" id="UzE-dx-aOp"/>
+                                    <constraint firstAttribute="width" secondItem="kua-dF-pb2" secondAttribute="height" multiplier="1:1" id="hv3-YC-GqN"/>
+                                </constraints>
+                                <buttonCell key="cell" type="bevel" bezelStyle="rounded" image="NSAdvanced" imagePosition="overlaps" alignment="center" imageScaling="proportionallyDown" inset="2" id="UyG-Rs-cbb">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="settingsButtonTapped:" target="XfG-lQ-9wD" id="Zto-FV-TsV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="uG1-W1-NC6" secondAttribute="trailing" constant="10" id="07S-EZ-noR"/>
-                            <constraint firstAttribute="bottom" secondItem="uG1-W1-NC6" secondAttribute="bottom" constant="10" id="axD-pF-6Pe"/>
-                            <constraint firstItem="uG1-W1-NC6" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="10" id="kHt-DC-hIO"/>
-                            <constraint firstItem="uG1-W1-NC6" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="10" id="ptd-UH-AT5"/>
+                            <constraint firstAttribute="trailing" secondItem="uG1-W1-NC6" secondAttribute="trailing" constant="15" id="07S-EZ-noR"/>
+                            <constraint firstAttribute="trailing" secondItem="kua-dF-pb2" secondAttribute="trailing" constant="1" id="2rK-6h-vkL"/>
+                            <constraint firstAttribute="bottom" secondItem="uG1-W1-NC6" secondAttribute="bottom" constant="15" id="axD-pF-6Pe"/>
+                            <constraint firstItem="kua-dF-pb2" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="1" id="gay-sE-a3U"/>
+                            <constraint firstItem="uG1-W1-NC6" firstAttribute="leading" secondItem="m2S-Jp-Qdl" secondAttribute="leading" constant="15" id="kHt-DC-hIO"/>
+                            <constraint firstItem="uG1-W1-NC6" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="15" id="ptd-UH-AT5"/>
                         </constraints>
                     </view>
                     <connections>
@@ -727,4 +743,7 @@
             <point key="canvasLocation" x="75" y="655"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="NSAdvanced" width="32" height="32"/>
+    </resources>
 </document>
