--- a/paddy/paddy/Base.lproj/Main.storyboard
+++ b/paddy/paddy/Base.lproj/Main.storyboard
@@ -745,6 +745,43 @@
             </objects>
             <point key="canvasLocation" x="75" y="697.5"/>
         </scene>
+        <!--About View Controller-->
+        <scene sceneID="aYG-KY-jk9">
+            <objects>
+                <viewController storyboardIdentifier="AboutViewController" id="PUk-if-GN0" customClass="AboutViewController" customModule="paddy" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" id="7Of-Jh-nMW">
+                        <rect key="frame" x="0.0" y="0.0" width="339" height="145"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GeX-yt-ExV">
+                                <rect key="frame" x="61" y="99" width="218" height="18"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Email me for issues, or feedback." id="JLV-Ty-svd">
+                                    <font key="font" metaFont="system" size="14"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="FeE-9x-T9w">
+                                <rect key="frame" x="102" y="54" width="136" height="18"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="drulang@gmail.com" id="Nxi-6U-QB3">
+                                    <font key="font" metaFont="systemMedium" size="14"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="FeE-9x-T9w" firstAttribute="centerX" secondItem="GeX-yt-ExV" secondAttribute="centerX" id="Npa-Ij-xDO"/>
+                            <constraint firstItem="GeX-yt-ExV" firstAttribute="centerX" secondItem="7Of-Jh-nMW" secondAttribute="centerX" id="Nzx-6x-VbU"/>
+                            <constraint firstItem="GeX-yt-ExV" firstAttribute="top" secondItem="7Of-Jh-nMW" secondAttribute="top" constant="28" id="Uaw-KZ-hmq"/>
+                            <constraint firstItem="FeE-9x-T9w" firstAttribute="top" secondItem="GeX-yt-ExV" secondAttribute="bottom" constant="27" id="YAH-0X-vkF"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <customObject id="SHJ-Aa-10u" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="34.5" y="238.5"/>
+        </scene>
     </scenes>
     <resources>
         <image name="NSAdvanced" width="32" height="32"/>
